--- a/github-finder/.env
+++ b/github-finder/.env
@@ -1,2 +1,2 @@
-REACT_APP_GITHUB_URL="https://api.gtihub.com" 
-REACT_APP_GITHUB_TOKEN="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"
+REACT_APP_GITHUB_URL=https://api.github.com 
+REACT_APP_GITHUB_TOKEN=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
